--- Auto-Git Commit ---

--- a/index.html
+++ b/index.html
@@ -73,8 +73,48 @@
 
 </aside>
 <div class="container">
-	
+	<img src="images/DSC_9116e.jpg" alt="">
 </div>
+
+<div class="portfolio">
+	<div class="content">
+		<div class="content-child">
+			<div class="pic">
+				<img src="images/image 5.png" alt="">
+			</div>
+			<div class="description">
+				<h4>Hard work</h4>
+				<p>Lorem ipsum dolor sit amet, simply the dummy tex for typing</p>
+			</div>
+		</div>
+	</div>
+	<div class="content">
+		<div class="content-child">
+			<div class="pic">
+				<img src="images/image 5.png" alt="">
+			</div>
+			<div class="description">
+				<h4>Hard work</h4>
+				<p>Lorem ipsum dolor sit amet, simply the dummy tex for typing</p>
+			</div>
+		</div>
+	</div>
+	<div class="content">
+		<div class="content-child">
+			<div class="pic">
+				<img src="images/image 5.png" alt="">
+			</div>
+			<div class="description">
+				<h4>Hard work</h4>
+				<p>Lorem ipsum dolor sit amet, simply the dummy tex for typing</p>
+			</div>
+		</div>
+	</div>
+
+</div>
+
+
+
 
 </body>
 </html>
