--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 </div>
 
 <div class="portfolio">
+	<h1><span>Latest</span> Working Project</h1>
 	<div class="content">
 		<div class="content-child">
 			<div class="pic">
@@ -112,6 +113,14 @@
 	</div>
 
 </div>
+<section class="design">
+	<ul>
+		<li>
+			work enquary
+		</li>
+		<li><a href="#">Lets chat</a></li>
+	</ul>
+</section>
 
 
 
