--- Auto-Git Commit ---

--- a/index.html
+++ b/index.html
@@ -76,6 +76,28 @@
 	<img src="images/DSC_9116e.jpg" alt="">
 </div>
 
+
+<section class="front-page">
+	<div class="intro">
+		<div class="myself">
+			<h1>HELLO,I'M <br><span>MD OMAR FARUK</span></h1>
+			<p>I am a fulstack Web Devoloper. I can design and develop a website</p>
+	
+		</div>
+	</div>
+	<div class="intro">
+		<div class="profile">
+			<img src="images/Group 33080.png" alt="">
+		</div>
+	</div>
+	
+</section>
+<div class="clearfix"></div>
+
+<section class="about">
+
+</section>
+
 <div class="portfolio">
 	<h1><span>Latest</span> Working Project</h1>
 	<div class="content">
@@ -114,13 +136,12 @@
 
 </div>
 <section class="design">
-	<ul>
-		<li>
-			work enquary
-		</li>
-		<li><a href="#">Lets chat</a></li>
-	</ul>
+	
+		<h2>work enquary</h2>
+		<a href="#">Lets chat</a>
+	
 </section>
+<div class="a"></div>
 
 
 
