--- Auto-Git Commit ---

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </div>
 <section class="aboutus">
 	<h1>ABOUT US</h1>
-	<div class="about">
+	<div class="about1">
 		<div class="about-img"><img src="images/testimonialleft.png"></div>
 		<div class="abouts">
 			<h2>SAFIN SAHRI</h2>
@@ -80,7 +80,7 @@
 <section class="front-page">
 	<div class="intro">
 		<div class="myself">
-			<h1>HELLO,I'M <br><span>MD OMAR FARUK</span></h1>
+			<h1>HELLO,I'M <span>MD OMAR FARUK</span></h1>
 			<p>I am a fulstack Web Devoloper. I can design and develop a website</p>
 	
 		</div>
@@ -95,8 +95,21 @@
 <div class="clearfix"></div>
 
 <section class="about">
-
+	<div class="intro">
+		<div class="profile">
+			<img src="images/Group 33080.png" alt="">
+		</div>
+	</div>
+	<div class="intro">
+		<div class="myself">
+			<h1>HELLO,I'M <span>MD OMAR FARUK</span></h1>
+			<p>I am a fulstack Web Devoloper. I can design and develop a website</p>
+	
+		</div>
+	</div>
+	
 </section>
+<div class="clearfix"></div>
 
 <div class="portfolio">
 	<h1><span>Latest</span> Working Project</h1>
